5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1644_1053.log
== TEST (2019-04-09 17:06:12) 
-- CODE:
nome = float("leia o nome do patrono:")
if (nome = "cervo"):
	
-- ERROR:
File "XXXX", line 2
    if (nome = "cervo"):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:06:46) 
-- CODE:
nome = float("leia o nome do patrono:")
if float(nome = "cervo"):
	
-- ERROR:
File "XXXX", line 4
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:06:53) 
-- CODE:
nome = float("leia o nome do patrono:")
if (nome = "cervo"):
	
-- ERROR:
File "XXXX", line 2
    if (nome = "cervo"):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:06:54) 
-- CODE:
nome = float("leia o nome do patrono:")
if (nome = "cervo"):
	
-- EXECUTION TIME:
0.199838
-- ERROR:
  File "/home/codebench/codes/1644/1053/main.py", line 2
    if (nome = "cervo"):
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:06:56) 
-- CODE:
nome = float("leia o nome do patrono:")
if (nome = "cervo"):
	
-- ERROR:
File "XXXX", line 2
    if (nome = "cervo"):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:07:20) 
-- CODE:
nome = ("leia o nome do patrono:")
if (nome = "cervo"):
	
-- ERROR:
File "XXXX", line 2
    if (nome = "cervo"):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:07:22) 
-- CODE:
nome = ("leia o nome do patrono:")
if (nome = "cervo"):
	
-- EXECUTION TIME:
0.264014
-- ERROR:
  File "/home/codebench/codes/1644/1053/main.py", line 2
    if (nome = "cervo"):
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:07:23) 
-- CODE:
nome = ("leia o nome do patrono:")
if (nome = "cervo"):
	
-- ERROR:
File "XXXX", line 2
    if (nome = "cervo"):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:20:50) 
-- CODE:
nome = float("leia o nome do patrono:")
if (nome = "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print('nome + nao eh patrono do Harry Potter')
	
-- EXECUTION TIME:
0.204611
-- ERROR:
  File "/home/codebench/codes/1644/1053/main.py", line 2
    if (nome = "cervo"):
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:20:51) 
-- CODE:
nome = float("leia o nome do patrono:")
if (nome = "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print('nome + nao eh patrono do Harry Potter')
	
-- ERROR:
File "XXXX", line 2
    if (nome = "cervo"):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:21:28) 
-- CODE:
nome = float("leia o nome do patrono:")
if (nome == "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print('nome + nao eh patrono do Harry Potter')
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = float("leia o nome do patrono:")
ValueError: could not convert string to float: 'leia o nome do patrono:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:21:54) 
-- CODE:
nome = float("leia o nome do patrono:")
if (nome == "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print('nome + nao eh patrono do Harry Potter')
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = float("leia o nome do patrono:")
ValueError: could not convert string to float: 'leia o nome do patrono:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:22:04) 
-- CODE:
nome = f("leia o nome do patrono:")
if (nome == "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print('nome + nao eh patrono do Harry Potter')
	
-- EXECUTION TIME:
0.175105
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/1053/main.py", line 1, in <module>
    nome = f("leia o nome do patrono:")
NameError: name 'f' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:22:05) 
-- CODE:
nome = f("leia o nome do patrono:")
if (nome == "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print('nome + nao eh patrono do Harry Potter')
	
-- EXECUTION TIME:
0.207075
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/1053/main.py", line 1, in <module>
    nome = f("leia o nome do patrono:")
NameError: name 'f' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:22:05) 
-- CODE:
nome = f("leia o nome do patrono:")
if (nome == "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print('nome + nao eh patrono do Harry Potter')
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = f("leia o nome do patrono:")
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:22:11) 
-- CODE:
nome = ("leia o nome do patrono:")
if (nome == "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print('nome + nao eh patrono do Harry Potter')
	
-- EXECUTION TIME:
0.154305
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
nome + nao eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nome + nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:22:11) 
-- CODE:
nome = ("leia o nome do patrono:")
if (nome == "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print('nome + nao eh patrono do Harry Potter')
	
-- OUTPUT:
nome + nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:22:16) 
-- CODE:
nome = ("leia o nome do patrono:")
if (nome == "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print('nome + nao eh patrono do Harry Potter')
	
-- OUTPUT:
nome + nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:22:18) 
-- CODE:
nome = ("leia o nome do patrono:")
if (nome == "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print('nome + nao eh patrono do Harry Potter')
	
-- EXECUTION TIME:
0.151958
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
nome + nao eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nome + nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:22:18) 
-- CODE:
nome = ("leia o nome do patrono:")
if (nome == "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print('nome + nao eh patrono do Harry Potter')
	
-- OUTPUT:
nome + nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:22:33) 
-- CODE:
nome = ("leia o nome do patrono:")
if (nome == "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print('nome' + 'nao eh patrono do Harry Potter')
	
-- EXECUTION TIME:
0.196079
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
nomenao eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nomenao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:22:34) 
-- CODE:
nome = ("leia o nome do patrono:")
if (nome == "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print('nome' + 'nao eh patrono do Harry Potter')
	
-- OUTPUT:
nomenao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:22:40) 
-- CODE:
nome = ("leia o nome do patrono:")
if (nome == "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print('nome' + 'nao eh patrono do Harry Potter')
	
-- OUTPUT:
nomenao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:22:48) 
-- CODE:
nome = ("leia o nome do patrono:")
if (nome == "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print('nome' +  'nao eh patrono do Harry Potter')
	
-- OUTPUT:
nomenao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:22:50) 
-- CODE:
nome = ("leia o nome do patrono:")
if (nome == "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print('nome' +  'nao eh patrono do Harry Potter')
	
-- EXECUTION TIME:
0.212737
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
nomenao eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nomenao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:22:50) 
-- CODE:
nome = ("leia o nome do patrono:")
if (nome == "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print('nome' +  'nao eh patrono do Harry Potter')
	
-- OUTPUT:
nomenao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:23:15) 
-- CODE:
nome = string("leia o nome do patrono:")
if (nome == "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print('nome' + 'nao eh patrono do Harry Potter')
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = string("leia o nome do patrono:")
NameError: name 'string' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:23:22) 
-- CODE:
nome = ("leia o nome do patrono:")
if (nome == "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print('nome' + 'nao eh patrono do Harry Potter')
	
-- OUTPUT:
nomenao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:23:30) 
-- CODE:
nome = ("leia o nome do patrono:")
if (nome == "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print('nao eh patrono do Harry Potter')
	
-- EXECUTION TIME:
0.138461
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:23:31) 
-- CODE:
nome = ("leia o nome do patrono:")
if (nome == "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print('nao eh patrono do Harry Potter')
	
-- OUTPUT:
nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:24:08) 
-- CODE:
nome = ("leia o nome do patrono:")
if (nome == "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print(' <entrada> nao eh patrono do Harry Potter')
	
-- EXECUTION TIME:
0.172918
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
<entrada> nao eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
<entrada> nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:24:08) 
-- CODE:
nome = ("leia o nome do patrono:")
if (nome == "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print(' <entrada> nao eh patrono do Harry Potter')
	
-- OUTPUT:
<entrada> nao eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:24:34) 
-- CODE:
entrada = ("leia o nome do patrono:")
if (nome == "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print('nao eh patrono do Harry Potter')
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if (nome == "cervo"):
NameError: name 'nome' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:25:00) 
-- CODE:
entrada = ("nome:")
if (nome == "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print('nao eh patrono do Harry Potter')
	
-- EXECUTION TIME:
0.146704
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/1053/main.py", line 2, in <module>
    if (nome == "cervo"):
NameError: name 'nome' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:25:00) 
-- CODE:
entrada = ("nome:")
if (nome == "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print('nao eh patrono do Harry Potter')
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if (nome == "cervo"):
NameError: name 'nome' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:25:20) 
-- CODE:
entrada = ("nome:")
if (nome == "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print('nao eh patrono do Harry Potter')
	
-- EXECUTION TIME:
0.15093
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/1053/main.py", line 2, in <module>
    if (nome == "cervo"):
NameError: name 'nome' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:25:20) 
-- CODE:
entrada = ("nome:")
if (nome == "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print('nao eh patrono do Harry Potter')
	
-- EXECUTION TIME:
0.098506
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1644/1053/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:25:21) 
-- CODE:
entrada = ("nome:")
if (nome == "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print('nao eh patrono do Harry Potter')
	
-- EXECUTION TIME:
0.12501
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/1053/main.py", line 2, in <module>
    if (nome == "cervo"):
NameError: name 'nome' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:42:43) 
-- CODE:
entrada = ("nome:")
if (nome == "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print('nao eh patrono do Harry Potter')
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if (nome == "cervo"):
NameError: name 'nome' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:42:43) 
-- CODE:
entrada = ("nome:")
if (nome == "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print('nao eh patrono do Harry Potter')
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if (nome == "cervo"):
NameError: name 'nome' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:43:02) 
-- CODE:
entrada = ("nome:")
if (nome = "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print('nao eh patrono do Harry Potter')
	
-- ERROR:
File "XXXX", line 2
    if (nome = "cervo"):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:43:03) 
-- CODE:
entrada = ("nome:")
if (nome = "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print('nao eh patrono do Harry Potter')
	
-- EXECUTION TIME:
0.152319
-- ERROR:
  File "/home/codebench/codes/1644/1053/main.py", line 2
    if (nome = "cervo"):
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:43:32) 
-- CODE:
entrada = input("nome:")
if (nome == "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print('nao eh patrono do Harry Potter')
	
-- EXECUTION TIME:
0.133161
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/1053/main.py", line 2, in <module>
    if (nome == "cervo"):
NameError: name 'nome' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:43:32) 
-- CODE:
entrada = input("nome:")
if (nome == "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print('nao eh patrono do Harry Potter')
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if (nome == "cervo"):
NameError: name 'nome' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:44:21) 
-- CODE:
entrada = input("nome:")
if (entrada == "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print('nao eh patrono do Harry Potter')
	
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:44:28) 
-- CODE:
entrada = input("nome:")
if (entrada == "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print('nao eh patrono do Harry Potter')
	
-- EXECUTION TIME:
0.163003
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:44:44) 
-- CODE:
entrada = input("nome:")
if (entrada == "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print('nao eh patrono do Harry Potter')
	
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:44:50) 
-- CODE:
entrada = input("nome:")
if (entrada == "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print('nao eh patrono do Harry Potter')
	
-- EXECUTION TIME:
0.163164
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:44:57) 
-- CODE:
entrada = input("nome:")
if (entrada == "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print('nao eh patrono do Harry Potter')
	
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:45:54) 
-- CODE:
entrada = input("nome:")
if (entrada == "cervo"):
	print('cervo eh patrono do Harry Potter')
	
else:
	print(entrada, 'nao eh patrono do Harry Potter')
	
-- EXECUTION TIME:
0.173418
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
